parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALIAS
    BEGIN
    BREAK
    CASE
    DIVIDE_ASSIGN
    DO
    ENSURE
    MINUS_ASSIGN
    MODULE
    MOD_ASSIGN
    NEXT
    PLUS_ASSIGN
    POWER_ASSIGN
    RANGE_EXCLUSIVE
    RANGE_INCLUSIVE
    RESCUE
    RETRY
    RETURN
    SCOPE
    SELF
    SEMICOLON
    SUPER
    THEN
    TIMES_ASSIGN
    UNLESS
    UNTIL
    WHEN
    YIELD

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> expression
Rule 5     statement -> assignment
Rule 6     statement -> io_statement
Rule 7     statement -> control_statement
Rule 8     statement -> function_definition
Rule 9     statement -> class_definition
Rule 10    expression -> INTEGER
Rule 11    expression -> FLOAT
Rule 12    expression -> STRING
Rule 13    expression -> SYMBOL
Rule 14    expression -> TRUE
Rule 15    expression -> FALSE
Rule 16    expression -> NIL
Rule 17    expression -> REGEXP
Rule 18    expression -> IDENTIFIER
Rule 19    expression -> INSTANCE_VARIABLE
Rule 20    expression -> CLASS_VARIABLE
Rule 21    expression -> GLOBAL_VARIABLE
Rule 22    expression -> CONSTANT
Rule 23    expression -> IDENTIFIER LBRACKET expression RBRACKET
Rule 24    expression -> expression DOT IDENTIFIER
Rule 25    expression -> expression DOT IDENTIFIER LPAREN arguments RPAREN
Rule 26    expression -> expression DOT IDENTIFIER LPAREN RPAREN
Rule 27    assignment -> IDENTIFIER ASSIGN expression
Rule 28    assignment -> INSTANCE_VARIABLE ASSIGN expression
Rule 29    assignment -> CLASS_VARIABLE ASSIGN expression
Rule 30    assignment -> GLOBAL_VARIABLE ASSIGN expression
Rule 31    assignment -> CONSTANT ASSIGN expression
Rule 32    assignment -> assignment_array ASSIGN expression
Rule 33    assignment_array -> IDENTIFIER LBRACKET expression RBRACKET
Rule 34    expression -> expression PLUS expression
Rule 35    expression -> expression MINUS expression
Rule 36    expression -> expression TIMES expression
Rule 37    expression -> expression DIVIDE expression
Rule 38    expression -> expression MODULE_OP expression
Rule 39    expression -> expression POWER expression
Rule 40    expression -> LPAREN expression RPAREN
Rule 41    expression -> MINUS expression
Rule 42    class_definition -> CLASS CONSTANT statements END
Rule 43    class_definition -> CLASS CONSTANT LESS CONSTANT statements END
Rule 44    function_definition -> DEF IDENTIFIER LPAREN params RPAREN statements END
Rule 45    function_definition -> DEF IDENTIFIER LPAREN RPAREN statements END
Rule 46    function_definition -> DEF IDENTIFIER statements END
Rule 47    params -> params COMMA IDENTIFIER
Rule 48    params -> IDENTIFIER
Rule 49    expression -> LBRACE hash_pairs RBRACE
Rule 50    expression -> LBRACE RBRACE
Rule 51    hash_pairs -> hash_pairs COMMA hash_pair
Rule 52    hash_pairs -> hash_pair
Rule 53    hash_pair -> expression HASH_ROCKET expression
Rule 54    hash_pair -> SYMBOL HASH_ROCKET expression
Rule 55    hash_pair -> STRING HASH_ROCKET expression
Rule 56    io_statement -> IDENTIFIER ASSIGN GETS DOT IDENTIFIER
Rule 57    io_statement -> IDENTIFIER ASSIGN GETS
Rule 58    control_statement -> FOR IDENTIFIER IN expression statements END
Rule 59    control_statement -> IF condition statements END
Rule 60    control_statement -> IF condition statements ELSE statements END
Rule 61    control_statement -> IF condition statements elsif_clauses END
Rule 62    control_statement -> IF condition statements elsif_clauses ELSE statements END
Rule 63    elsif_clauses -> elsif_clauses ELSIF condition statements
Rule 64    elsif_clauses -> ELSIF condition statements
Rule 65    control_statement -> WHILE condition statements END
Rule 66    condition -> expression EQUAL expression
Rule 67    condition -> expression NOT_EQUAL expression
Rule 68    condition -> expression GREATER expression
Rule 69    condition -> expression LESS expression
Rule 70    condition -> expression GREATER_EQUAL expression
Rule 71    condition -> expression LESS_EQUAL expression
Rule 72    condition -> expression SPACESHIP expression
Rule 73    condition -> expression CASE_EQUAL expression
Rule 74    condition -> condition LOGICAL_AND condition
Rule 75    condition -> condition AND condition
Rule 76    condition -> condition LOGICAL_OR condition
Rule 77    condition -> condition OR condition
Rule 78    condition -> LOGICAL_NOT condition
Rule 79    condition -> NOT condition
Rule 80    condition -> expression
Rule 81    expression -> LBRACKET array_elements RBRACKET
Rule 82    expression -> LBRACKET RBRACKET
Rule 83    array_elements -> array_elements COMMA expression
Rule 84    array_elements -> expression
Rule 85    io_statement -> PUTS expression
Rule 86    io_statement -> PUTS
Rule 87    expression -> IDENTIFIER LPAREN arguments RPAREN
Rule 88    expression -> IDENTIFIER LPAREN RPAREN
Rule 89    expression -> IDENTIFIER arguments
Rule 90    arguments -> arguments COMMA expression
Rule 91    arguments -> expression

Terminals, with rules where they appear

ALIAS                : 
AND                  : 75
ASSIGN               : 27 28 29 30 31 32 56 57
BEGIN                : 
BREAK                : 
CASE                 : 
CASE_EQUAL           : 73
CLASS                : 42 43
CLASS_VARIABLE       : 20 29
COMMA                : 47 51 83 90
CONSTANT             : 22 31 42 43 43
DEF                  : 44 45 46
DIVIDE               : 37
DIVIDE_ASSIGN        : 
DO                   : 
DOT                  : 24 25 26 56
ELSE                 : 60 62
ELSIF                : 63 64
END                  : 42 43 44 45 46 58 59 60 61 62 65
ENSURE               : 
EQUAL                : 66
FALSE                : 15
FLOAT                : 11
FOR                  : 58
GETS                 : 56 57
GLOBAL_VARIABLE      : 21 30
GREATER              : 68
GREATER_EQUAL        : 70
HASH_ROCKET          : 53 54 55
IDENTIFIER           : 18 23 24 25 26 27 33 44 45 46 47 48 56 56 57 58 87 88 89
IF                   : 59 60 61 62
IN                   : 58
INSTANCE_VARIABLE    : 19 28
INTEGER              : 10
LBRACE               : 49 50
LBRACKET             : 23 33 81 82
LESS                 : 43 69
LESS_EQUAL           : 71
LOGICAL_AND          : 74
LOGICAL_NOT          : 78
LOGICAL_OR           : 76
LPAREN               : 25 26 40 44 45 87 88
MINUS                : 35 41
MINUS_ASSIGN         : 
MODULE               : 
MODULE_OP            : 38
MOD_ASSIGN           : 
NEXT                 : 
NIL                  : 16
NOT                  : 79
NOT_EQUAL            : 67
OR                   : 77
PLUS                 : 34
PLUS_ASSIGN          : 
POWER                : 39
POWER_ASSIGN         : 
PUTS                 : 85 86
RANGE_EXCLUSIVE      : 
RANGE_INCLUSIVE      : 
RBRACE               : 49 50
RBRACKET             : 23 33 81 82
REGEXP               : 17
RESCUE               : 
RETRY                : 
RETURN               : 
RPAREN               : 25 26 40 44 45 87 88
SCOPE                : 
SELF                 : 
SEMICOLON            : 
SPACESHIP            : 72
STRING               : 12 55
SUPER                : 
SYMBOL               : 13 54
THEN                 : 
TIMES                : 36
TIMES_ASSIGN         : 
TRUE                 : 14
UNLESS               : 
UNTIL                : 
WHEN                 : 
WHILE                : 65
YIELD                : 
error                : 

Nonterminals, with rules where they appear

arguments            : 25 87 89 90
array_elements       : 81 83
assignment           : 5
assignment_array     : 32
class_definition     : 9
condition            : 59 60 61 62 63 64 65 74 74 75 75 76 76 77 77 78 79
control_statement    : 7
elsif_clauses        : 61 62 63
expression           : 4 23 24 25 26 27 28 29 30 31 32 33 34 34 35 35 36 36 37 37 38 38 39 39 40 41 53 53 54 55 58 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 80 83 84 85 90 91
function_definition  : 8
hash_pair            : 51 52
hash_pairs           : 49 51
io_statement         : 6
params               : 44 47
program              : 0
statement            : 2 3
statements           : 1 2 42 43 44 45 46 58 59 60 60 61 62 62 63 64 65

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . expression
    (5) statement -> . assignment
    (6) statement -> . io_statement
    (7) statement -> . control_statement
    (8) statement -> . function_definition
    (9) statement -> . class_definition
    (10) expression -> . INTEGER
    (11) expression -> . FLOAT
    (12) expression -> . STRING
    (13) expression -> . SYMBOL
    (14) expression -> . TRUE
    (15) expression -> . FALSE
    (16) expression -> . NIL
    (17) expression -> . REGEXP
    (18) expression -> . IDENTIFIER
    (19) expression -> . INSTANCE_VARIABLE
    (20) expression -> . CLASS_VARIABLE
    (21) expression -> . GLOBAL_VARIABLE
    (22) expression -> . CONSTANT
    (23) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (24) expression -> . expression DOT IDENTIFIER
    (25) expression -> . expression DOT IDENTIFIER LPAREN arguments RPAREN
    (26) expression -> . expression DOT IDENTIFIER LPAREN RPAREN
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression TIMES expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression MODULE_OP expression
    (39) expression -> . expression POWER expression
    (40) expression -> . LPAREN expression RPAREN
    (41) expression -> . MINUS expression
    (49) expression -> . LBRACE hash_pairs RBRACE
    (50) expression -> . LBRACE RBRACE
    (81) expression -> . LBRACKET array_elements RBRACKET
    (82) expression -> . LBRACKET RBRACKET
    (87) expression -> . IDENTIFIER LPAREN arguments RPAREN
    (88) expression -> . IDENTIFIER LPAREN RPAREN
    (89) expression -> . IDENTIFIER arguments
    (27) assignment -> . IDENTIFIER ASSIGN expression
    (28) assignment -> . INSTANCE_VARIABLE ASSIGN expression
    (29) assignment -> . CLASS_VARIABLE ASSIGN expression
    (30) assignment -> . GLOBAL_VARIABLE ASSIGN expression
    (31) assignment -> . CONSTANT ASSIGN expression
    (32) assignment -> . assignment_array ASSIGN expression
    (56) io_statement -> . IDENTIFIER ASSIGN GETS DOT IDENTIFIER
    (57) io_statement -> . IDENTIFIER ASSIGN GETS
    (85) io_statement -> . PUTS expression
    (86) io_statement -> . PUTS
    (58) control_statement -> . FOR IDENTIFIER IN expression statements END
    (59) control_statement -> . IF condition statements END
    (60) control_statement -> . IF condition statements ELSE statements END
    (61) control_statement -> . IF condition statements elsif_clauses END
    (62) control_statement -> . IF condition statements elsif_clauses ELSE statements END
    (65) control_statement -> . WHILE condition statements END
    (44) function_definition -> . DEF IDENTIFIER LPAREN params RPAREN statements END
    (45) function_definition -> . DEF IDENTIFIER LPAREN RPAREN statements END
    (46) function_definition -> . DEF IDENTIFIER statements END
    (42) class_definition -> . CLASS CONSTANT statements END
    (43) class_definition -> . CLASS CONSTANT LESS CONSTANT statements END
    (33) assignment_array -> . IDENTIFIER LBRACKET expression RBRACKET

    INTEGER         shift and go to state 10
    FLOAT           shift and go to state 11
    STRING          shift and go to state 12
    SYMBOL          shift and go to state 13
    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    NIL             shift and go to state 16
    REGEXP          shift and go to state 17
    IDENTIFIER      shift and go to state 18
    INSTANCE_VARIABLE shift and go to state 19
    CLASS_VARIABLE  shift and go to state 20
    GLOBAL_VARIABLE shift and go to state 21
    CONSTANT        shift and go to state 22
    LPAREN          shift and go to state 24
    MINUS           shift and go to state 25
    LBRACE          shift and go to state 26
    LBRACKET        shift and go to state 23
    PUTS            shift and go to state 28
    FOR             shift and go to state 29
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    DEF             shift and go to state 32
    CLASS           shift and go to state 33

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 4
    assignment                     shift and go to state 5
    io_statement                   shift and go to state 6
    control_statement              shift and go to state 7
    function_definition            shift and go to state 8
    class_definition               shift and go to state 9
    assignment_array               shift and go to state 27

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . expression
    (5) statement -> . assignment
    (6) statement -> . io_statement
    (7) statement -> . control_statement
    (8) statement -> . function_definition
    (9) statement -> . class_definition
    (10) expression -> . INTEGER
    (11) expression -> . FLOAT
    (12) expression -> . STRING
    (13) expression -> . SYMBOL
    (14) expression -> . TRUE
    (15) expression -> . FALSE
    (16) expression -> . NIL
    (17) expression -> . REGEXP
    (18) expression -> . IDENTIFIER
    (19) expression -> . INSTANCE_VARIABLE
    (20) expression -> . CLASS_VARIABLE
    (21) expression -> . GLOBAL_VARIABLE
    (22) expression -> . CONSTANT
    (23) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (24) expression -> . expression DOT IDENTIFIER
    (25) expression -> . expression DOT IDENTIFIER LPAREN arguments RPAREN
    (26) expression -> . expression DOT IDENTIFIER LPAREN RPAREN
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression TIMES expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression MODULE_OP expression
    (39) expression -> . expression POWER expression
    (40) expression -> . LPAREN expression RPAREN
    (41) expression -> . MINUS expression
    (49) expression -> . LBRACE hash_pairs RBRACE
    (50) expression -> . LBRACE RBRACE
    (81) expression -> . LBRACKET array_elements RBRACKET
    (82) expression -> . LBRACKET RBRACKET
    (87) expression -> . IDENTIFIER LPAREN arguments RPAREN
    (88) expression -> . IDENTIFIER LPAREN RPAREN
    (89) expression -> . IDENTIFIER arguments
    (27) assignment -> . IDENTIFIER ASSIGN expression
    (28) assignment -> . INSTANCE_VARIABLE ASSIGN expression
    (29) assignment -> . CLASS_VARIABLE ASSIGN expression
    (30) assignment -> . GLOBAL_VARIABLE ASSIGN expression
    (31) assignment -> . CONSTANT ASSIGN expression
    (32) assignment -> . assignment_array ASSIGN expression
    (56) io_statement -> . IDENTIFIER ASSIGN GETS DOT IDENTIFIER
    (57) io_statement -> . IDENTIFIER ASSIGN GETS
    (85) io_statement -> . PUTS expression
    (86) io_statement -> . PUTS
    (58) control_statement -> . FOR IDENTIFIER IN expression statements END
    (59) control_statement -> . IF condition statements END
    (60) control_statement -> . IF condition statements ELSE statements END
    (61) control_statement -> . IF condition statements elsif_clauses END
    (62) control_statement -> . IF condition statements elsif_clauses ELSE statements END
    (65) control_statement -> . WHILE condition statements END
    (44) function_definition -> . DEF IDENTIFIER LPAREN params RPAREN statements END
    (45) function_definition -> . DEF IDENTIFIER LPAREN RPAREN statements END
    (46) function_definition -> . DEF IDENTIFIER statements END
    (42) class_definition -> . CLASS CONSTANT statements END
    (43) class_definition -> . CLASS CONSTANT LESS CONSTANT statements END
    (33) assignment_array -> . IDENTIFIER LBRACKET expression RBRACKET

    $end            reduce using rule 1 (program -> statements .)
    INTEGER         shift and go to state 10
    FLOAT           shift and go to state 11
    STRING          shift and go to state 12
    SYMBOL          shift and go to state 13
    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    NIL             shift and go to state 16
    REGEXP          shift and go to state 17
    IDENTIFIER      shift and go to state 18
    INSTANCE_VARIABLE shift and go to state 19
    CLASS_VARIABLE  shift and go to state 20
    GLOBAL_VARIABLE shift and go to state 21
    CONSTANT        shift and go to state 22
    LPAREN          shift and go to state 24
    MINUS           shift and go to state 25
    LBRACE          shift and go to state 26
    LBRACKET        shift and go to state 23
    PUTS            shift and go to state 28
    FOR             shift and go to state 29
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    DEF             shift and go to state 32
    CLASS           shift and go to state 33

    statement                      shift and go to state 34
    expression                     shift and go to state 4
    assignment                     shift and go to state 5
    io_statement                   shift and go to state 6
    control_statement              shift and go to state 7
    function_definition            shift and go to state 8
    class_definition               shift and go to state 9
    assignment_array               shift and go to state 27

state 3

    (3) statements -> statement .

    INTEGER         reduce using rule 3 (statements -> statement .)
    FLOAT           reduce using rule 3 (statements -> statement .)
    STRING          reduce using rule 3 (statements -> statement .)
    SYMBOL          reduce using rule 3 (statements -> statement .)
    TRUE            reduce using rule 3 (statements -> statement .)
    FALSE           reduce using rule 3 (statements -> statement .)
    NIL             reduce using rule 3 (statements -> statement .)
    REGEXP          reduce using rule 3 (statements -> statement .)
    IDENTIFIER      reduce using rule 3 (statements -> statement .)
    INSTANCE_VARIABLE reduce using rule 3 (statements -> statement .)
    CLASS_VARIABLE  reduce using rule 3 (statements -> statement .)
    GLOBAL_VARIABLE reduce using rule 3 (statements -> statement .)
    CONSTANT        reduce using rule 3 (statements -> statement .)
    LPAREN          reduce using rule 3 (statements -> statement .)
    MINUS           reduce using rule 3 (statements -> statement .)
    LBRACE          reduce using rule 3 (statements -> statement .)
    LBRACKET        reduce using rule 3 (statements -> statement .)
    PUTS            reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    DEF             reduce using rule 3 (statements -> statement .)
    CLASS           reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    END             reduce using rule 3 (statements -> statement .)
    ELSE            reduce using rule 3 (statements -> statement .)
    ELSIF           reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> expression .
    (24) expression -> expression . DOT IDENTIFIER
    (25) expression -> expression . DOT IDENTIFIER LPAREN arguments RPAREN
    (26) expression -> expression . DOT IDENTIFIER LPAREN RPAREN
    (34) expression -> expression . PLUS expression
    (35) expression -> expression . MINUS expression
    (36) expression -> expression . TIMES expression
    (37) expression -> expression . DIVIDE expression
    (38) expression -> expression . MODULE_OP expression
    (39) expression -> expression . POWER expression

  ! shift/reduce conflict for MINUS resolved as shift
    INTEGER         reduce using rule 4 (statement -> expression .)
    FLOAT           reduce using rule 4 (statement -> expression .)
    STRING          reduce using rule 4 (statement -> expression .)
    SYMBOL          reduce using rule 4 (statement -> expression .)
    TRUE            reduce using rule 4 (statement -> expression .)
    FALSE           reduce using rule 4 (statement -> expression .)
    NIL             reduce using rule 4 (statement -> expression .)
    REGEXP          reduce using rule 4 (statement -> expression .)
    IDENTIFIER      reduce using rule 4 (statement -> expression .)
    INSTANCE_VARIABLE reduce using rule 4 (statement -> expression .)
    CLASS_VARIABLE  reduce using rule 4 (statement -> expression .)
    GLOBAL_VARIABLE reduce using rule 4 (statement -> expression .)
    CONSTANT        reduce using rule 4 (statement -> expression .)
    LPAREN          reduce using rule 4 (statement -> expression .)
    LBRACE          reduce using rule 4 (statement -> expression .)
    LBRACKET        reduce using rule 4 (statement -> expression .)
    PUTS            reduce using rule 4 (statement -> expression .)
    FOR             reduce using rule 4 (statement -> expression .)
    IF              reduce using rule 4 (statement -> expression .)
    WHILE           reduce using rule 4 (statement -> expression .)
    DEF             reduce using rule 4 (statement -> expression .)
    CLASS           reduce using rule 4 (statement -> expression .)
    $end            reduce using rule 4 (statement -> expression .)
    END             reduce using rule 4 (statement -> expression .)
    ELSE            reduce using rule 4 (statement -> expression .)
    ELSIF           reduce using rule 4 (statement -> expression .)
    DOT             shift and go to state 35
    PLUS            shift and go to state 36
    MINUS           shift and go to state 37
    TIMES           shift and go to state 38
    DIVIDE          shift and go to state 39
    MODULE_OP       shift and go to state 40
    POWER           shift and go to state 41

  ! MINUS           [ reduce using rule 4 (statement -> expression .) ]


state 5

    (5) statement -> assignment .

    INTEGER         reduce using rule 5 (statement -> assignment .)
    FLOAT           reduce using rule 5 (statement -> assignment .)
    STRING          reduce using rule 5 (statement -> assignment .)
    SYMBOL          reduce using rule 5 (statement -> assignment .)
    TRUE            reduce using rule 5 (statement -> assignment .)
    FALSE           reduce using rule 5 (statement -> assignment .)
    NIL             reduce using rule 5 (statement -> assignment .)
    REGEXP          reduce using rule 5 (statement -> assignment .)
    IDENTIFIER      reduce using rule 5 (statement -> assignment .)
    INSTANCE_VARIABLE reduce using rule 5 (statement -> assignment .)
    CLASS_VARIABLE  reduce using rule 5 (statement -> assignment .)
    GLOBAL_VARIABLE reduce using rule 5 (statement -> assignment .)
    CONSTANT        reduce using rule 5 (statement -> assignment .)
    LPAREN          reduce using rule 5 (statement -> assignment .)
    MINUS           reduce using rule 5 (statement -> assignment .)
    LBRACE          reduce using rule 5 (statement -> assignment .)
    LBRACKET        reduce using rule 5 (statement -> assignment .)
    PUTS            reduce using rule 5 (statement -> assignment .)
    FOR             reduce using rule 5 (statement -> assignment .)
    IF              reduce using rule 5 (statement -> assignment .)
    WHILE           reduce using rule 5 (statement -> assignment .)
    DEF             reduce using rule 5 (statement -> assignment .)
    CLASS           reduce using rule 5 (statement -> assignment .)
    $end            reduce using rule 5 (statement -> assignment .)
    END             reduce using rule 5 (statement -> assignment .)
    ELSE            reduce using rule 5 (statement -> assignment .)
    ELSIF           reduce using rule 5 (statement -> assignment .)


state 6

    (6) statement -> io_statement .

    INTEGER         reduce using rule 6 (statement -> io_statement .)
    FLOAT           reduce using rule 6 (statement -> io_statement .)
    STRING          reduce using rule 6 (statement -> io_statement .)
    SYMBOL          reduce using rule 6 (statement -> io_statement .)
    TRUE            reduce using rule 6 (statement -> io_statement .)
    FALSE           reduce using rule 6 (statement -> io_statement .)
    NIL             reduce using rule 6 (statement -> io_statement .)
    REGEXP          reduce using rule 6 (statement -> io_statement .)
    IDENTIFIER      reduce using rule 6 (statement -> io_statement .)
    INSTANCE_VARIABLE reduce using rule 6 (statement -> io_statement .)
    CLASS_VARIABLE  reduce using rule 6 (statement -> io_statement .)
    GLOBAL_VARIABLE reduce using rule 6 (statement -> io_statement .)
    CONSTANT        reduce using rule 6 (statement -> io_statement .)
    LPAREN          reduce using rule 6 (statement -> io_statement .)
    MINUS           reduce using rule 6 (statement -> io_statement .)
    LBRACE          reduce using rule 6 (statement -> io_statement .)
    LBRACKET        reduce using rule 6 (statement -> io_statement .)
    PUTS            reduce using rule 6 (statement -> io_statement .)
    FOR             reduce using rule 6 (statement -> io_statement .)
    IF              reduce using rule 6 (statement -> io_statement .)
    WHILE           reduce using rule 6 (statement -> io_statement .)
    DEF             reduce using rule 6 (statement -> io_statement .)
    CLASS           reduce using rule 6 (statement -> io_statement .)
    $end            reduce using rule 6 (statement -> io_statement .)
    END             reduce using rule 6 (statement -> io_statement .)
    ELSE            reduce using rule 6 (statement -> io_statement .)
    ELSIF           reduce using rule 6 (statement -> io_statement .)


state 7

    (7) statement -> control_statement .

    INTEGER         reduce using rule 7 (statement -> control_statement .)
    FLOAT           reduce using rule 7 (statement -> control_statement .)
    STRING          reduce using rule 7 (statement -> control_statement .)
    SYMBOL          reduce using rule 7 (statement -> control_statement .)
    TRUE            reduce using rule 7 (statement -> control_statement .)
    FALSE           reduce using rule 7 (statement -> control_statement .)
    NIL             reduce using rule 7 (statement -> control_statement .)
    REGEXP          reduce using rule 7 (statement -> control_statement .)
    IDENTIFIER      reduce using rule 7 (statement -> control_statement .)
    INSTANCE_VARIABLE reduce using rule 7 (statement -> control_statement .)
    CLASS_VARIABLE  reduce using rule 7 (statement -> control_statement .)
    GLOBAL_VARIABLE reduce using rule 7 (statement -> control_statement .)
    CONSTANT        reduce using rule 7 (statement -> control_statement .)
    LPAREN          reduce using rule 7 (statement -> control_statement .)
    MINUS           reduce using rule 7 (statement -> control_statement .)
    LBRACE          reduce using rule 7 (statement -> control_statement .)
    LBRACKET        reduce using rule 7 (statement -> control_statement .)
    PUTS            reduce using rule 7 (statement -> control_statement .)
    FOR             reduce using rule 7 (statement -> control_statement .)
    IF              reduce using rule 7 (statement -> control_statement .)
    WHILE           reduce using rule 7 (statement -> control_statement .)
    DEF             reduce using rule 7 (statement -> control_statement .)
    CLASS           reduce using rule 7 (statement -> control_statement .)
    $end            reduce using rule 7 (statement -> control_statement .)
    END             reduce using rule 7 (statement -> control_statement .)
    ELSE            reduce using rule 7 (statement -> control_statement .)
    ELSIF           reduce using rule 7 (statement -> control_statement .)


state 8

    (8) statement -> function_definition .

    INTEGER         reduce using rule 8 (statement -> function_definition .)
    FLOAT           reduce using rule 8 (statement -> function_definition .)
    STRING          reduce using rule 8 (statement -> function_definition .)
    SYMBOL          reduce using rule 8 (statement -> function_definition .)
    TRUE            reduce using rule 8 (statement -> function_definition .)
    FALSE           reduce using rule 8 (statement -> function_definition .)
    NIL             reduce using rule 8 (statement -> function_definition .)
    REGEXP          reduce using rule 8 (statement -> function_definition .)
    IDENTIFIER      reduce using rule 8 (statement -> function_definition .)
    INSTANCE_VARIABLE reduce using rule 8 (statement -> function_definition .)
    CLASS_VARIABLE  reduce using rule 8 (statement -> function_definition .)
    GLOBAL_VARIABLE reduce using rule 8 (statement -> function_definition .)
    CONSTANT        reduce using rule 8 (statement -> function_definition .)
    LPAREN          reduce using rule 8 (statement -> function_definition .)
    MINUS           reduce using rule 8 (statement -> function_definition .)
    LBRACE          reduce using rule 8 (statement -> function_definition .)
    LBRACKET        reduce using rule 8 (statement -> function_definition .)
    PUTS            reduce using rule 8 (statement -> function_definition .)
    FOR             reduce using rule 8 (statement -> function_definition .)
    IF              reduce using rule 8 (statement -> function_definition .)
    WHILE           reduce using rule 8 (statement -> function_definition .)
    DEF             reduce using rule 8 (statement -> function_definition .)
    CLASS           reduce using rule 8 (statement -> function_definition .)
    $end            reduce using rule 8 (statement -> function_definition .)
    END             reduce using rule 8 (statement -> function_definition .)
    ELSE            reduce using rule 8 (statement -> function_definition .)
    ELSIF           reduce using rule 8 (statement -> function_definition .)


state 9

    (9) statement -> class_definition .

    INTEGER         reduce using rule 9 (statement -> class_definition .)
    FLOAT           reduce using rule 9 (statement -> class_definition .)
    STRING          reduce using rule 9 (statement -> class_definition .)
    SYMBOL          reduce using rule 9 (statement -> class_definition .)
    TRUE            reduce using rule 9 (statement -> class_definition .)
    FALSE           reduce using rule 9 (statement -> class_definition .)
    NIL             reduce using rule 9 (statement -> class_definition .)
    REGEXP          reduce using rule 9 (statement -> class_definition .)
    IDENTIFIER      reduce using rule 9 (statement -> class_definition .)
    INSTANCE_VARIABLE reduce using rule 9 (statement -> class_definition .)
    CLASS_VARIABLE  reduce using rule 9 (statement -> class_definition .)
    GLOBAL_VARIABLE reduce using rule 9 (statement -> class_definition .)
    CONSTANT        reduce using rule 9 (statement -> class_definition .)
    LPAREN          reduce using rule 9 (statement -> class_definition .)
    MINUS           reduce using rule 9 (statement -> class_definition .)
    LBRACE          reduce using rule 9 (statement -> class_definition .)
    LBRACKET        reduce using rule 9 (statement -> class_definition .)
    PUTS            reduce using rule 9 (statement -> class_definition .)
    FOR             reduce using rule 9 (statement -> class_definition .)
    IF              reduce using rule 9 (statement -> class_definition .)
    WHILE           reduce using rule 9 (statement -> class_definition .)
    DEF             reduce using rule 9 (statement -> class_definition .)
    CLASS           reduce using rule 9 (statement -> class_definition .)
    $end            reduce using rule 9 (statement -> class_definition .)
    END             reduce using rule 9 (statement -> class_definition .)
    ELSE            reduce using rule 9 (statement -> class_definition .)
    ELSIF           reduce using rule 9 (statement -> class_definition .)


state 10

    (10) expression -> INTEGER .
